--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* .div_main{
+  background-color: blueviolet;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  align-content: center;
+  display: flex;
 }
+
+.div_center{
+  width: 250px;
+  height: 400px;
+  background-color: white;
+  border-radius: 10px;
+  align-items: center;
+  align-content: center;
+  position: absolute;
+  left: 450px;
+  box-shadow: 2px 4px 2px 2px;
+} */
+
+.div-heading{
+  background-color: rgb(61, 191, 252);
+  width: 100%;
+  height: 50px;
+}
+
+.fa-star{
+  background-color: rgb(61, 191, 252);
+  float: left;
+  color: orange;
+  padding: 10px;
+  font-size: x-large;
+}
+
+.searchcarticon{
+  position: absolute;
+  right: 0;
+  color: white;
+  background-color: rgb(61, 191, 252);
+  padding: 10px;
+  font-size: x-large;
+}
+
+.searchcarticon .fa-search{
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.subbutton{
+margin: 10px;
+outline: none;
+border: none;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+height: 30px;
+cursor: pointer;
+}
+.fa-shopping-cart{
+  cursor: pointer;
+}
+
+.div_main .addtocart{
+  border-radius: 20px;
+  background-color: orange;
+  width: 80px;
+  height: 30px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  /* float: right; */
+  margin: 20px;
+  margin-left: 60px;
+}
+
+.div_main{
+  float: left;
+  margin: 10px;
+  height: 350px;
+  width: 250px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.div_main img{
+  width: 200px;
+  height: 200px;
+}
+
+.div_detail .displayprice{
+  float: left;
+  color: rgb(49, 49, 53);
+}
+
+.div_detail .actualprice{
+  float: left;
+  text-decoration: line-through;
+  margin-left: 10px;
+  color: rgb(49, 49, 53);
+}
+
+.div_detail .discount{
+  float: right;
+  font-weight: bold;
+  color: lightgreen;
+}
+
+.div_footer{
+  background-color: rgb(61, 191, 252);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  height: 30px;
+  text-align: center;
+  padding: 5px;
+}
+
+
